# paper-survey-agent

./: .gitignore  Makefile  README.md  config.yaml  pyproject.toml
scripts/: 01_harvest_hf_papers.py  02_harvest_semantic_scholar.py  03_harvest_conferences.py  04_deduplicate_and_score.py  04b_triage.py  05_generate_deep_dives.py  06_generate_obsidian_notes.py  07_build_graph.py  08_copy_to_vault.py  refresh_metadata.py
src/paper_discovery/: __init__.py  arxiv_html.py  checkpoint.py  cli.py  config.py  llm_client.py
src/paper_discovery/agents/: deep_dive.py  triage.py
tests/: conftest.py  test_arxiv_html.py  test_citation_propagation.py  test_deep_dive_helpers.py  test_scoring.py
